BUG FIX: Avoid auto zoom on mobile by increaing text size to above IOS threshold

--- a/styles.css
+++ b/styles.css
@@ -464,6 +464,7 @@ li a:hover {
 /* Wide cells span 2 columns */
 .workout-grid .grid-row.wide-cells input {
   grid-column: span 2;
+  font-size: 16px;
 }
 
 /* Span 2 columns for row 4 */
@@ -486,6 +487,7 @@ li a:hover {
 
 .workout-grid .grid-row:nth-of-type(4) input {
   border-bottom: 3px solid #2c3e50;
+  font-size: 16px;
 }
 
 /* .workout-grid .grid-row:nth-of-type(2n+6) input {
